--- a/Employee and ProductionWorker Classes/Employee and ProductionWorker Classes.vcxproj
+++ b/Employee and ProductionWorker Classes/Employee and ProductionWorker Classes.vcxproj
@@ -146,6 +146,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Employee.cpp" />
+    <ClCompile Include="ProductionWorker.cpp" />
+    <ClCompile Include="ShiftSupervisor.cpp" />
+    <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Employee.h" />
+    <ClInclude Include="ProductionWorker.h" />
+    <ClInclude Include="ShiftSupervisor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
